--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,35 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.red{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%; 
+    margin-bottom: 15px; 
+    margin-left: 10px;
+    background-color: red;
+}
+.yellow{
+     width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+    margin-left: 10px;
+    background-color: yellow;
+}
+.green{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin-bottom: 15px;
+    margin-left: 10px;
+    background-color: green;
+}
+#light{
+    background-color:black;
+    width: 150px;
+    margin-left: 350px;
+    margin-top: 10px}
+.glow{
+    box-shadow: 0px 0px 9px 4px #747DE8;
+}
